Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Bank Database
  '''
}


Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  is_email_verified boolean [not null, default: false]
  password_changed_at timestampz [not null,default: `0001-01-01 00:00:00Z`]
  created_at timestampz [not null,default: `now()`]
}


Table verify_emails {
  id bigserial [pk]
  username varchar [ref: > U.username, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used bool [not null, default: false]
  created_at timestampz [not null,default: `now()`]
  expired_at timestampz [not null,default: `now() + interval '15 minutes'`]
}


Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username,not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestampz [not null,default: `now()`]
  Indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id]
  amount bigint [not null, note: 'can be positive or negative']
  created_at timestampz [not null,default: `now()`]
   Indexes {
    account_id
  }
}

Table transfer {
  id bigserial [pk]
  from_account_id bigint [not null,ref: > A.id]
  to_account_id bigint [not null,ref: > A.id]
  amount bigint [not null,note: 'must be positive']
  created_at timestampz [not null, default: `now()`]
   Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
 }




